--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <script src="true-way.js">
+    <script src="population-extend.js">
     </script>
   </body
 </html>
